--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -114,7 +114,9 @@
                                             <li class="@(ViewBag.SegundoNivel == "home" ? "current-page" : null )"><a href="@Url.Action("Index", "Home")">Inicio</a></li>
                                         </ul>
                                     </li>
-                                    @if (User.IsInRole(TipoRoles.RH) || User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CREAR))
+                                    @if (User.IsInRole(TipoRoles.RH) || User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CREAR)
+                                        || User.IsInRole(TipoRoles.RH_MENU_COMEDOR_PUEBLA)
+                                        )
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "recursos_humanos" ? "active" : null )">
                                             <a><i class="fa fa-users-rectangle"></i>Recursos Humanos<span class="fa fa-chevron-down"></span></a>
@@ -133,6 +135,11 @@
                                                     <li class="@(ViewBag.SegundoNivel == "SolicitudesEnProceso" ? "current-page" : null )"><a href="@Url.Action("SolicitudesEnProceso", "IT_matriz_requerimientos")">Solicitudes en Proceso</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "SolicitudesRechazadas" ? "current-page" : null )"><a href="@Url.Action("SolicitudesRechazadas", "IT_matriz_requerimientos")">Solicitudes Rechazadas</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "SolicitudesFinalizadas" ? "current-page" : null )"><a href="@Url.Action("SolicitudesFinalizadas", "IT_matriz_requerimientos")">Solicitudes Finalizadas</a></li>
+                                                }
+                                                @if (User.IsInRole(TipoRoles.RH_MENU_COMEDOR_PUEBLA))
+                                                {
+                                                    <h3>Men&uacute; Comedor</h3>
+                                                    <li class="@(ViewBag.SegundoNivel == "RH_menu_comedor" ? "current-page" : null )"><a href="@Url.Action("Index", "RH_menu_comedor")">Actualizar Men&uacute;</a></li>
                                                 }
                                             </ul>
                                         </li>
@@ -648,8 +655,8 @@
                                                 {
                                                     <h3>Centros de Costo</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "actual" ? "current-page" : null )"><a href="@Url.Action("Actual", "ResponsableBudget")">ACT FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(-1)))</a></li>
-                                                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
-                                                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
+                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
+                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "centros" ? "current-page" : null )"><a href="@Url.Action("Centros", "ResponsableBudget")">Mis Centros</a></li>
                                                 }
 
@@ -692,6 +699,18 @@
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "usuarios" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "roles" ? "current-page" : null )"><a href="@Url.Action( "Index", "RolesAdmin")">Roles</a></li>
                                                 <li class="@(ViewBag.SegundoNivel == "usuarios" ? "current-page" : null )"><a href="@Url.Action("Index", "UsersAdmin")">Usuarios</a></li>
+                                            </ul>
+                                        </li>
+                                    }
+
+                                    @*MENÚ COMED*@
+
+                                    @if (User.IsInRole(TipoRoles.RH_MENU_COMEDOR_VISUALIZAR_PUEBLA))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "menu_comedor" ? "active" : null )">
+                                            <a><i class="fa fa-utensils"></i> Menú Comedor <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "menu_comedor" ? "display:block" : null )">
+                                                <li class="@(ViewBag.SegundoNivel == "menu" ? "current-page" : null )"><a href="@Url.Action( "DetailsMenu", "RH_menu_comedor")">Ver Men&uacute;</a></li>                                                
                                             </ul>
                                         </li>
                                     }
